--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body {
     font-size: 20px;
     font-weight: 500;
     color: #FFF;
+    border: none;
     text-transform: uppercase;
     padding: 10px 40px;
     cursor: pointer;
