--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 * {
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
     font-family: Poppins, sans-serif;
 }
 
@@ -22,6 +22,7 @@ body {
 
 .navbar {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
 }
@@ -31,6 +32,10 @@ body {
     padding: 5px 10px;
 }
 
+.logo-img {
+    width: 100px;
+}
+
 .list {
     flex-grow: 0.4;
 }
@@ -38,8 +43,11 @@ body {
 .nav-list {
     list-style-type: none;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     cursor: pointer;
+    margin-bottom: 10px;
+    gap: 10px;
 }
 
 .active-item {
@@ -48,7 +56,7 @@ body {
     text-underline-offset: 5px;
 }
 
-.nav-btn>button {
+.btn {
     background-color: #1BBCEF;
     font-size: 20px;
     font-weight: 500;
@@ -61,7 +69,8 @@ body {
 
 .header-section-2 {
     display: flex;
-    margin-left: 50px;
+    flex-wrap: wrap-reverse;
+    margin: 50px;
 }
 
 .header-left {
@@ -70,14 +79,14 @@ body {
 }
 
 .header-title {
-    width: 400px;
+    /* width: 400px; */
     font-size: 50px;
     color: white;
     margin-bottom: 50px;
 }
 
 .header-desc {
-    width: 450px;
+    /* width: 450px; */
     font-size: 15px;
 }
 
@@ -126,13 +135,14 @@ body {
 
 .cards {
     display: flex;
+    flex-wrap: wrap;
     gap: 50px;
     justify-content: center;
 }
 
 .card {
     width: 270px;
-    height: 350px;
+    /* height: 350px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -205,4 +215,43 @@ body {
 .list-icon {
     margin-right: 10px;
     font-size: 20px;
+}
+
+@media (max-width:768px) {
+    .btn {
+        font-size: 16px;
+        padding: 5px 10px;
+    }
+    .main-header {
+        padding: 20px;
+    }
+    .header-right,
+    .header-left {
+        width: 100%;
+        margin: 20px;
+    }
+    .header-section-2 {
+        margin: 20px;
+    }
+    .card {
+        /* margin: 10px auto;
+        width: 80%; */
+    }
+    .feature-cards {
+        margin: 20px;
+    }
+    .feature-heading {
+        width: 100%;
+        margin: 40px 20px;
+    }
+    .mid-section {
+        margin: 20px;
+        flex-direction: column;
+    }
+    .left-image {
+        width: 100%;
+    }
+    .features {
+        width: 100%;
+    }
 }
